# airnc

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  install.sh
.github/workflows/: release.yml  server.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  main.rs  server.rs  utils.rs  ws.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  persistence.rs  routes.rs
src/: cli.rs  main.rs  server.rs
tmp/: hello.txt
