[package]
name = "airnc"
version = "0.0.2"
edition = "2021"
description = "A LAN transmission tool"
authors = ["fangyuan.leslie@gmail.com"]
keywords = ["cli", "file-transmission", "LAN"]
license = "MIT"
homepage = "https://github.com/zhazhazhu/airnc/tree/master/crates/client"
repository = "https://github.com/zhazhazhu/airnc/tree/master/crates/client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1.35.1", features = ["full"] }
actix-web = "4"
rand = "0.8.5"
qrcode = "0.13"
image = "0.24.7"
termimage = "1.2.1"
async-stream = "0.3.5"
indicatif = "0.17.7"
inquire = "0.6.2"
websockets = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
